# CISEC_UNIBE

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
bot/: i18n_es.py  main.py  menus.py  utils.py
bot/features/: ai_patient.py  broadcast.py  ifom.py  syllabus_grades.py  week.py
common/: config.py  db.py
data/: ifom_bank.json  sofia-gastro.json
data/patient_notes/: sofia_case.txt
scripts/: seed_ifom.py  seed_patient_from_pdf.py
tests/: conftest.py  test_ai_patient.py  test_menus.py  test_week.py
