[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cisec_nexus"
version = "0.1.0"
description = "CISEC Nexus Telegram bot and API"
authors = [{name = "CISEC Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
